Cache twitter posts better and fix sidebar layout problems

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -66,7 +66,7 @@
 
   .calendar-feed {
     .event-thumb {
-      margin-right: 20px;
+      margin-right: 10px;
       margin-top: 2px;
       height: 50px;
       width: 50px;
@@ -87,18 +87,24 @@
       }
     }
 
-    h3 {
+    .event-title {
       margin-top: 0px;
       margin-bottom: 2px;
+      font-size: 19px;
+      white-space: nowrap;
+
+      a {
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
 
-    p {
-      font-size: 13px;
-    }
+    p { font-size: 13px; }
 
     li {
-      display: inline;
-      height: 40px;
+      height: 54px;
+      margin-bottom: 10px;
     }
   }
 }
